force-app/main/default/objects/Salary_Table__c/fields/HR_System_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>HR_System_Group_ID__c</fullName>
    <label>HR System Group Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>