force-app/main/default/objects/Salary_Table__c/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>