force-app/main/default/objects/Salary_Table__c/fields/Salary_Grade_Group__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade_Group__c</fullName>
    <label>Salary Grade Group</label>
    <length>40</length>
    <type>Text</type>
</CustomField>