force-app/main/default/objects/Salary_Table__c/fields/Salary_Grade_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Salary_Grade_Group_Number__c</fullName>
    <label>Salary Grade Group Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>